conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: not found: value isfacingwall
if (isfacingwall()){
    ^