conditions.Conditions.scala.code
if (isfacingwall()){
  backward()
} else {forward()}